trying fixing next line overflow for 2018

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
 
 .profile-info {
     flex: 1;
-    max-width: 600px;
+    max-width: 700px;
 }
 
 .profile-info h2 {
